--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "name": "admcode/admcode-starter",
+    "description": "Create PHP projects based on ADMCode's template",
+    "keywords": ["framework", "laravel", "lumen", "admcode", "admcode-starter"],
+    "homepage": "https://github.com/admcode/admcode-starter",
     "license": "MIT",
     "type": "project",
     "require": {
